		Activities: fixed PHP Notice error (repeated many times) in activity add and edit interfaces
		Activities: added optional permission for activity organisers to take attendance only within their activities
		Activities: added term filter to manage view
		Activities: fixed PHP warnings in Edit Activity Enrolment when access via My Activities.
		Attendance: added ability (off by default) for students to register themselves as Present, when within a set of IP addresses
		Attendance: added explicitly stored context recording where attendance was taken
		Attendance: added settings to determine pre-filling of attendance in different contexts
		Attendance: added settings to determine default type in different contexts
		Attendance: added dynamic legend for Student History report
		Attendance: added extra role to allow form group attendance to be restricted to own form group
		Attendance: updated Take Attendance by Class to exclude students with timetable exceptions
		Finance: added ability to bulk issue invoices without sending email
		Finance: tweaked interface for display of payment log to make it more usable
		Finance: added ability to view and print receipts for refunded invoices
		Finance: fixed bug preventing reminder emails from being sent
		Finance: fixed bug leading to invoice values changing (in print view only) after issue
		Finance: added reminder number to Email Reminder section header in overdue invoice edit view
		Formal Assessment: improved layout of Internal Assessment view
		Library: added new type to store Audio/Visual equipment
		Markbook: added a class average row to the bottom of markbook views (when Weighting is enabled)
		Markbook: fixed order for first markbook column not saving properly
		Markbook: allow decimal values for markbook column attainment raw max
		Markbook: fixed custom Attainment label for Total Mark field
		Markbook: added a markbook setting to enable display of cumulative marks on View Markbook and Student Profile pages